--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
       <div class="text-4xl mb-2">📄➡️🗂</div>
       <h2 class="font-semibold mb-1">Excel → JSON</h2>
       <p class="text-gray-500 mb-3 text-sm">将 Excel 表格快速转换为 JSON 格式，便于前端或系统使用。</p>
-      <a href="excel_to_json.html" class="bg-blue-500 hover:bg-blue-600 text-white px-4 py-2 rounded">打开工具</a>
+      <a href="./excel_to_json.html" class="bg-blue-500 hover:bg-blue-600 text-white px-4 py-2 rounded">打开工具</a>
     </div>
 
     <!-- 思维导图编辑器 -->
@@ -24,7 +24,7 @@
       <div class="text-4xl mb-2">🧠🗺️</div>
       <h2 class="font-semibold mb-1">思维导图编辑器</h2>
       <p class="text-gray-500 mb-3 text-sm">在线绘制思维导图，可添加节点、连接线，导出为图片或 JSON。</p>
-      <a href="mindmap_editor.html" class="bg-green-500 hover:bg-green-600 text-white px-4 py-2 rounded">打开工具</a>
+      <a href="./mindmap_editor.html" class="bg-green-500 hover:bg-green-600 text-white px-4 py-2 rounded">打开工具</a>
     </div>
 
     <!-- 产品成本表（基础版） -->
@@ -32,7 +32,7 @@
       <div class="text-4xl mb-2">💰📊</div>
       <h2 class="font-semibold mb-1">产品成本表</h2>
       <p class="text-gray-500 mb-3 text-sm">填写原料、包装、工序等成本，自动计算总价，可导入/导出 Excel。</p>
-      <a href="cost.html" class="bg-yellow-500 hover:bg-yellow-600 text-white px-4 py-2 rounded">打开工具</a>
+      <a href="./cost.html" class="bg-yellow-500 hover:bg-yellow-600 text-white px-4 py-2 rounded">打开工具</a>
     </div>
 
     <!-- BOM 层级成本分析 -->
@@ -40,7 +40,7 @@
       <div class="text-4xl mb-2">🧩💹</div>
       <h2 class="font-semibold mb-1">BOM 层级成本分析</h2>
       <p class="text-gray-500 mb-3 text-sm">支持半成品/原料层级，自动计算各级成本，并可生成层级图和成本饼图。</p>
-      <a href="cost_bom.html" class="bg-purple-500 hover:bg-purple-600 text-white px-4 py-2 rounded">打开工具</a>
+      <a href="./cost_bom.html" class="bg-purple-500 hover:bg-purple-600 text-white px-4 py-2 rounded">打开工具</a>
     </div>
   </div>
 
