--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
       <div class="text-4xl mb-2">📄➡️🗂</div>
       <h2 class="font-semibold mb-1">Excel → JSON</h2>
       <p class="text-gray-500 mb-3 text-sm">将 Excel 表格快速转换为 JSON 格式，便于前端或系统使用。</p>
-      <a href="./excel_to_json.html" class="bg-blue-500 hover:bg-blue-600 text-white px-4 py-2 rounded">打开工具</a>
+      <a href="./excel2json.html" class="bg-blue-500 hover:bg-blue-600 text-white px-4 py-2 rounded">打开工具</a>
     </div>
 
     <!-- 思维导图编辑器 -->
@@ -24,7 +24,7 @@
       <div class="text-4xl mb-2">🧠🗺️</div>
       <h2 class="font-semibold mb-1">思维导图编辑器</h2>
       <p class="text-gray-500 mb-3 text-sm">在线绘制思维导图，可添加节点、连接线，导出为图片或 JSON。</p>
-      <a href="./mindmap_editor.html" class="bg-green-500 hover:bg-green-600 text-white px-4 py-2 rounded">打开工具</a>
+      <a href="./mindmap.html" class="bg-green-500 hover:bg-green-600 text-white px-4 py-2 rounded">打开工具</a>
     </div>
 
     <!-- 产品成本表（基础版） -->
@@ -44,6 +44,6 @@
     </div>
   </div>
 
-  <footer class="mt-12 text-gray-500 text-sm text-center">© 2025 trtjkqh/tools | 所有工具均为网页本地运行</footer>
+  <footer class="mt-12 text-gray-500 text-sm text-center">© 2025 采购管理部 | 所有工具均为网页本地运行</footer>
 </body>
 </html>
