--- a/index.html
+++ b/index.html
@@ -3,11 +3,11 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>工具库 | trtjkqh/tools</title>
+  <title>工具库</title>
   <script src="https://cdn.tailwindcss.com"></script>
 </head>
 <body class="bg-gray-50 min-h-screen flex flex-col items-center p-4">
-  <h1 class="text-3xl font-bold mb-6">🛠 trtjkqh/tools 工具库</h1>
+  <h1 class="text-3xl font-bold mb-6">🛠 工具库</h1>
   <p class="mb-8 text-gray-600 text-center max-w-xl">这里汇总了各种实用网页工具，包括采购、成本分析、思维导图、Excel 转 JSON 等，可直接在浏览器使用。</p>
 
   <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-6 w-full max-w-5xl">
