--- a/index.html
+++ b/index.html
@@ -19,6 +19,14 @@
       <a href="./excel2json.html" class="bg-blue-500 hover:bg-blue-600 text-white px-4 py-2 rounded">打开工具</a>
     </div>
 
+<!-- 包装报价模板 -->
+<div class="bg-white rounded-xl shadow p-4 flex flex-col items-center text-center hover:shadow-lg transition">
+  <div class="text-4xl mb-2">📦💰</div>
+  <h2 class="font-semibold mb-1">包装报价模板</h2>
+  <p class="text-gray-500 mb-3 text-sm">填写产品信息、阶梯报价及要求，生成 Excel 报价单。</p>
+  <a href="./packing_quote.html" class="bg-indigo-500 hover:bg-indigo-600 text-white px-4 py-2 rounded">打开工具</a>
+</div>
+
     <!-- 思维导图编辑器 -->
     <div class="bg-white rounded-xl shadow p-4 flex flex-col items-center text-center hover:shadow-lg transition">
       <div class="text-4xl mb-2">🧠🗺️</div>
