--- a/excel2json.html
+++ b/excel2json.html
@@ -1,76 +1,110 @@
 <!DOCTYPE html>
 <html lang="zh-CN">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Excel 转 JSON 工具</title>
-  <script src="https://cdn.tailwindcss.com"></script>
-  <script src="https://cdn.jsdelivr.net/npm/xlsx@0.18.5/dist/xlsx.full.min.js"></script>
+    <meta charset="UTF-8">
+    <title>在线Excel转JSON工具</title>
+    <meta name="description" content="在当今数据驱动的时代，Excel表格和JSON格式是两种最常用的数据载体。为了帮助用户高效完成数据转换，我们开发了这款完全免费的在线Excel转JSON工具，让数据格式转换变得简单快捷。" />
+    <link rel="stylesheet" href="style.css" />
 </head>
-<body class="bg-gray-100 min-h-screen flex flex-col items-center p-6">
-  <h1 class="text-2xl font-bold mb-4 text-gray-800">📊 Excel 转 JSON 工具</h1>
+<body>
+    <div class="container">
+        <header>
+            <h1>在线Excel转JSON工具</h1>
+            <p class="subtitle">快速将Excel或CSV文件转换为JSON格式，支持数据预览、列选择、格式化和下载功能</p>
+            <div id="ad_line" style="text-align: center; margin: auto; margin-top: 10px;"></div>
+        </header>
 
-  <div class="bg-white shadow-lg rounded-xl p-6 w-full max-w-2xl">
-    <input type="file" id="fileInput" accept=".xlsx, .xls" class="mb-4 block w-full text-sm text-gray-700">
-    <div id="sheetContainer" class="hidden mb-4">
-      <label for="sheetSelect" class="block mb-2 text-gray-700">选择工作表：</label>
-      <select id="sheetSelect" class="border rounded p-2 w-full"></select>
+        <div class="tool-container">
+            <div class="input-section">
+                <div class="card">
+                    <h2 class="card-title">📤 输入文件</h2>
+
+                    <div id="fileUploadArea" class="file-upload-area">
+                        <div class="file-upload-icon">📁</div>
+                        <h3>拖放文件到此处或点击上传</h3>
+                        <p>支持 .xlsx 和 .csv 文件格式</p>
+                        <p><small>(CSV文件需为UTF-8编码)</small></p>
+                        <input type="file" id="fileInput" accept=".xlsx,.csv" style="display: none;">
+                    </div>
+
+                    <div id="fileInfo" class="file-info">
+                        <strong>已选择文件:</strong> <span id="fileName"></span>
+                        <span id="fileSize"></span>
+                    </div>
+
+                    <div id="columnsContainer" class="columns-container">
+                        <h3>选择要转换的列 (默认全选):</h3>
+                        <div id="columnsGrid" class="columns-grid">
+                            <!-- 列选择器将在这里动态生成 -->
+                        </div>
+                    </div>
+
+                    <div id="uploadStatus" class="status-message"></div>
+
+                    <div class="action-buttons">
+                        <button id="convertBtn" class="btn btn-primary" disabled>转换为JSON</button>
+                        <button id="clearBtn" class="btn btn-warning">清空所有</button>
+                    </div>
+                </div>
+            </div>
+
+            <div class="output-section">
+                <div class="card">
+                    <h2 class="card-title">📥 输出结果</h2>
+
+                    <textarea id="jsonOutput" placeholder="转换后的JSON数据将显示在这里..." readonly></textarea>
+
+                    <div class="output-actions">
+                        <button id="formatBtn" class="btn btn-utility" disabled>
+                            <span>✨</span> 格式化
+                        </button>
+                        <button id="compressBtn" class="btn btn-utility" disabled>
+                            <span>🔍</span> 压缩
+                        </button>
+                        <button id="downloadBtn" class="btn btn-secondary" disabled>
+                            <span>💾</span> 下载JSON
+                        </button>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+        <div class="instructions">
+            <h2>📝 使用说明</h2>
+            <div class="instructions-content">
+                <div class="instruction-card">
+                    <h3><span>ℹ️</span> 工具简介</h3>
+                    <p>在线Excel转JSON工具，打开Excel或者CSV文件，转换为JSON格式的数据，转换后的JSON数据支持复制和下载。</p>
+                </div>
+
+                <div class="instruction-card">
+                    <h3><span>📋</span> 文件要求</h3>
+                    <ul>
+                        <li>支持.xlsx和.csv文件格式</li>
+                        <li>CSV文件需使用UTF-8编码</li>
+                        <li>第一行为列名(不支持多行多列组合列名)</li>
+                        <li>第二行开始为数据内容</li>
+                    </ul>
+                </div>
+
+                <div class="instruction-card">
+                    <h3><span>⚙️</span> 功能说明</h3>
+                    <ul>
+                        <li><strong>打开：</strong>上传Excel或CSV文件</li>
+                        <li><strong>转换：</strong>将表格数据转换为JSON格式</li>
+                        <li><strong>列选择：</strong>选择要包含在JSON中的列</li>
+                        <li><strong>格式化：</strong>美化JSON输出格式</li>
+                        <li><strong>压缩：</strong>压缩JSON为单行格式</li>
+                        <li><strong>下载：</strong>将JSON保存为本地文件</li>
+                        <li><strong>清空：</strong>重置所有数据</li>
+                    </ul>
+                </div>
+            </div>
+        </div>
+
+        <footer>
+            <p>© 2025 在线Excel转JSON工具 | 数据在浏览器本地处理，不会上传到服务器</p>
+        </footer>
     </div>
-    <div id="preview" class="text-sm text-gray-700 bg-gray-50 rounded p-3 overflow-auto max-h-64"></div>
-    <button id="downloadBtn" class="mt-4 bg-blue-600 text-white px-4 py-2 rounded hover:bg-blue-700 hidden">导出 JSON</button>
-  </div>
-
-  <script>
-    const fileInput = document.getElementById('fileInput');
-    const sheetSelect = document.getElementById('sheetSelect');
-    const sheetContainer = document.getElementById('sheetContainer');
-    const preview = document.getElementById('preview');
-    const downloadBtn = document.getElementById('downloadBtn');
-    let workbookData = {};
-
-    fileInput.addEventListener('change', async (e) => {
-      const file = e.target.files[0];
-      if (!file) return;
-
-      const data = await file.arrayBuffer();
-      const workbook = XLSX.read(data);
-      workbookData = {};
-
-      sheetSelect.innerHTML = '';
-      workbook.SheetNames.forEach(name => {
-        const json = XLSX.utils.sheet_to_json(workbook.Sheets[name]);
-        workbookData[name] = json;
-        const option = document.createElement('option');
-        option.value = name;
-        option.textContent = `${name} (${json.length} 行)`;
-        sheetSelect.appendChild(option);
-      });
-
-      sheetContainer.classList.remove('hidden');
-      previewData(sheetSelect.value);
-      downloadBtn.classList.remove('hidden');
-    });
-
-    sheetSelect.addEventListener('change', () => previewData(sheetSelect.value));
-
-    function previewData(sheetName) {
-      const data = workbookData[sheetName] || [];
-      preview.innerHTML = data.length
-        ? `<pre>${JSON.stringify(data.slice(0, 10), null, 2)}${data.length > 10 ? "\n...（仅显示前10行）" : ""}</pre>`
-        : '<p class="text-gray-500">空工作表</p>';
-    }
-
-    downloadBtn.addEventListener('click', () => {
-      const sheetName = sheetSelect.value;
-      const data = workbookData[sheetName];
-      const blob = new Blob([JSON.stringify(data, null, 2)], { type: 'application/json' });
-      const url = URL.createObjectURL(blob);
-      const a = document.createElement('a');
-      a.href = url;
-      a.download = `${sheetName}.json`;
-      a.click();
-      URL.revokeObjectURL(url);
-    });
-  </script>
 </body>
 </html>
