--- a/excel2json.html
+++ b/excel2json.html
@@ -3,108 +3,253 @@
 <head>
     <meta charset="UTF-8">
     <title>在线Excel转JSON工具</title>
-    <meta name="description" content="在当今数据驱动的时代，Excel表格和JSON格式是两种最常用的数据载体。为了帮助用户高效完成数据转换，我们开发了这款完全免费的在线Excel转JSON工具，让数据格式转换变得简单快捷。" />
-    <link rel="stylesheet" href="style.css" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="在线Excel转JSON工具，快速将Excel或CSV文件转换为JSON格式，支持数据预览、列选择、格式化和下载功能。">
+
+    <!-- xlsx.js库 -->
+    <script src="https://cdn.jsdelivr.net/npm/xlsx/dist/xlsx.full.min.js"></script>
+
+    <style>
+        body {margin:0; font-family:"Microsoft YaHei",sans-serif; background:#f5f5f5; color:#333;}
+        .container {max-width:1200px; margin:0 auto; padding:20px; display:flex; flex-direction:column; min-height:100vh;}
+        header{text-align:center; margin-bottom:30px;}
+        header h1{font-size:2rem; margin-bottom:10px;}
+        header p.subtitle{font-size:1rem; color:#666;}
+        .tool-container{display:flex; flex-wrap:wrap; gap:20px; margin-bottom:30px;}
+        .input-section, .output-section{flex:1 1 500px;}
+        .card{background:#fff; padding:20px; border-radius:12px; box-shadow:0 4px 12px rgba(0,0,0,0.08);}
+        .card-title{font-size:1.2rem; margin-bottom:15px;}
+        .file-upload-area{border:2px dashed #ccc; padding:40px; text-align:center; border-radius:10px; cursor:pointer; transition:border-color .3s;}
+        .file-upload-area:hover{border-color:#007bff;}
+        .file-upload-icon{font-size:2.5rem; margin-bottom:10px;}
+        #fileInfo{margin-top:10px; font-size:0.9rem;}
+        .columns-container{margin-top:20px;}
+        .columns-grid{display:flex; flex-wrap:wrap; gap:10px; margin-top:10px;}
+        .action-buttons, .output-actions{margin-top:20px; display:flex; gap:10px; flex-wrap:wrap;}
+        button{padding:8px 15px; border:none; border-radius:6px; cursor:pointer; transition: background-color .2s; font-size:0.9rem;}
+        .btn-primary{background:#007bff; color:#fff;}
+        .btn-primary:hover{background:#0069d9;}
+        .btn-warning{background:#ffc107; color:#333;}
+        .btn-warning:hover{background:#e0a800;}
+        .btn-secondary{background:#28a745; color:#fff;}
+        .btn-secondary:hover{background:#218838;}
+        .btn-utility{background:#6c757d; color:#fff;}
+        .btn-utility:hover{background:#5a6268;}
+        #jsonOutput{width:100%; min-height:250px; resize:vertical; padding:10px; border-radius:8px; border:1px solid #ccc; font-family:Consolas,monospace; font-size:0.9rem; margin-top:10px; background:#f8f8f8;}
+        .instructions{margin-bottom:30px;}
+        .instructions h2{font-size:1.5rem; margin-bottom:15px;}
+        .instruction-card{background:#fff; padding:15px; border-radius:10px; box-shadow:0 2px 8px rgba(0,0,0,0.05); margin-bottom:15px;}
+        .instruction-card h3{font-size:1.1rem; margin-bottom:10px;}
+        .instruction-card ul{padding-left:20px;}
+        footer{text-align:center; font-size:0.8rem; color:#888; margin-top:auto; padding:15px 0;}
+        @media(max-width:900px){.tool-container{flex-direction:column;}}
+    </style>
 </head>
 <body>
-    <div class="container">
-        <header>
-            <h1>在线Excel转JSON工具</h1>
-            <p class="subtitle">快速将Excel或CSV文件转换为JSON格式，支持数据预览、列选择、格式化和下载功能</p>
-            <div id="ad_line" style="text-align: center; margin: auto; margin-top: 10px;"></div>
-        </header>
+<div class="container">
+    <header>
+        <h1>在线Excel转JSON工具</h1>
+        <p class="subtitle">快速将Excel或CSV文件转换为JSON格式，支持数据预览、列选择、格式化和下载功能</p>
+    </header>
 
-        <div class="tool-container">
-            <div class="input-section">
-                <div class="card">
-                    <h2 class="card-title">📤 输入文件</h2>
-
-                    <div id="fileUploadArea" class="file-upload-area">
-                        <div class="file-upload-icon">📁</div>
-                        <h3>拖放文件到此处或点击上传</h3>
-                        <p>支持 .xlsx 和 .csv 文件格式</p>
-                        <p><small>(CSV文件需为UTF-8编码)</small></p>
-                        <input type="file" id="fileInput" accept=".xlsx,.csv" style="display: none;">
-                    </div>
-
-                    <div id="fileInfo" class="file-info">
-                        <strong>已选择文件:</strong> <span id="fileName"></span>
-                        <span id="fileSize"></span>
-                    </div>
-
-                    <div id="columnsContainer" class="columns-container">
-                        <h3>选择要转换的列 (默认全选):</h3>
-                        <div id="columnsGrid" class="columns-grid">
-                            <!-- 列选择器将在这里动态生成 -->
-                        </div>
-                    </div>
-
-                    <div id="uploadStatus" class="status-message"></div>
-
-                    <div class="action-buttons">
-                        <button id="convertBtn" class="btn btn-primary" disabled>转换为JSON</button>
-                        <button id="clearBtn" class="btn btn-warning">清空所有</button>
-                    </div>
+    <div class="tool-container">
+        <div class="input-section">
+            <div class="card">
+                <h2 class="card-title">📤 输入文件</h2>
+                <div id="fileUploadArea" class="file-upload-area">
+                    <div class="file-upload-icon">📁</div>
+                    <h3>拖放文件到此处或点击上传</h3>
+                    <p>支持 .xlsx 和 .csv 文件格式</p>
+                    <p><small>(CSV文件需为UTF-8编码)</small></p>
+                    <input type="file" id="fileInput" accept=".xlsx,.csv" style="display:none;">
                 </div>
-            </div>
-
-            <div class="output-section">
-                <div class="card">
-                    <h2 class="card-title">📥 输出结果</h2>
-
-                    <textarea id="jsonOutput" placeholder="转换后的JSON数据将显示在这里..." readonly></textarea>
-
-                    <div class="output-actions">
-                        <button id="formatBtn" class="btn btn-utility" disabled>
-                            <span>✨</span> 格式化
-                        </button>
-                        <button id="compressBtn" class="btn btn-utility" disabled>
-                            <span>🔍</span> 压缩
-                        </button>
-                        <button id="downloadBtn" class="btn btn-secondary" disabled>
-                            <span>💾</span> 下载JSON
-                        </button>
-                    </div>
+                <div id="fileInfo" class="file-info"><strong>已选择文件:</strong> <span id="fileName"></span> <span id="fileSize"></span></div>
+                <div id="columnsContainer" class="columns-container" style="display:none;">
+                    <h3>选择要转换的列 (默认全选):</h3>
+                    <div id="columnsGrid" class="columns-grid"></div>
+                </div>
+                <div id="uploadStatus" class="status-message"></div>
+                <div class="action-buttons">
+                    <button id="convertBtn" class="btn btn-primary" disabled>转换为JSON</button>
+                    <button id="clearBtn" class="btn btn-warning">清空所有</button>
                 </div>
             </div>
         </div>
 
-        <div class="instructions">
-            <h2>📝 使用说明</h2>
-            <div class="instructions-content">
-                <div class="instruction-card">
-                    <h3><span>ℹ️</span> 工具简介</h3>
-                    <p>在线Excel转JSON工具，打开Excel或者CSV文件，转换为JSON格式的数据，转换后的JSON数据支持复制和下载。</p>
-                </div>
-
-                <div class="instruction-card">
-                    <h3><span>📋</span> 文件要求</h3>
-                    <ul>
-                        <li>支持.xlsx和.csv文件格式</li>
-                        <li>CSV文件需使用UTF-8编码</li>
-                        <li>第一行为列名(不支持多行多列组合列名)</li>
-                        <li>第二行开始为数据内容</li>
-                    </ul>
-                </div>
-
-                <div class="instruction-card">
-                    <h3><span>⚙️</span> 功能说明</h3>
-                    <ul>
-                        <li><strong>打开：</strong>上传Excel或CSV文件</li>
-                        <li><strong>转换：</strong>将表格数据转换为JSON格式</li>
-                        <li><strong>列选择：</strong>选择要包含在JSON中的列</li>
-                        <li><strong>格式化：</strong>美化JSON输出格式</li>
-                        <li><strong>压缩：</strong>压缩JSON为单行格式</li>
-                        <li><strong>下载：</strong>将JSON保存为本地文件</li>
-                        <li><strong>清空：</strong>重置所有数据</li>
-                    </ul>
+        <div class="output-section">
+            <div class="card">
+                <h2 class="card-title">📥 输出结果</h2>
+                <textarea id="jsonOutput" placeholder="转换后的JSON数据将显示在这里..." readonly></textarea>
+                <div class="output-actions">
+                    <button id="formatBtn" class="btn btn-utility" disabled>✨ 格式化</button>
+                    <button id="compressBtn" class="btn btn-utility" disabled>🔍 压缩</button>
+                    <button id="downloadBtn" class="btn btn-secondary" disabled>💾 下载JSON</button>
                 </div>
             </div>
         </div>
-
-        <footer>
-            <p>© 2025 在线Excel转JSON工具 | 数据在浏览器本地处理，不会上传到服务器</p>
-        </footer>
     </div>
+
+    <div class="instructions">
+        <h2>📝 使用说明</h2>
+        <div class="instructions-content">
+            <div class="instruction-card">
+                <h3>ℹ️ 工具简介</h3>
+                <p>在线Excel转JSON工具，打开Excel或者CSV文件，转换为JSON格式的数据，转换后的JSON数据支持复制和下载。</p>
+            </div>
+            <div class="instruction-card">
+                <h3>📋 文件要求</h3>
+                <ul>
+                    <li>支持.xlsx和.csv文件格式</li>
+                    <li>CSV文件需使用UTF-8编码</li>
+                    <li>第一行为列名(不支持多行组合列名)</li>
+                    <li>第二行开始为数据内容</li>
+                </ul>
+            </div>
+            <div class="instruction-card">
+                <h3>⚙️ 功能说明</h3>
+                <ul>
+                    <li>打开：上传Excel或CSV文件</li>
+                    <li>转换：将表格数据转换为JSON格式</li>
+                    <li>列选择：选择要包含在JSON中的列</li>
+                    <li>格式化：美化JSON输出格式</li>
+                    <li>压缩：压缩JSON为单行格式</li>
+                    <li>下载：将JSON保存为本地文件</li>
+                    <li>清空：重置所有数据</li>
+                </ul>
+            </div>
+        </div>
+    </div>
+
+    <footer>© 2023 在线Excel转JSON工具 | 数据在浏览器本地处理，不会上传到服务器</footer>
+</div>
+
+<script>
+const fileInput = document.getElementById('fileInput');
+const fileUploadArea = document.getElementById('fileUploadArea');
+const fileNameEl = document.getElementById('fileName');
+const fileSizeEl = document.getElementById('fileSize');
+const columnsContainer = document.getElementById('columnsContainer');
+const columnsGrid = document.getElementById('columnsGrid');
+const convertBtn = document.getElementById('convertBtn');
+const clearBtn = document.getElementById('clearBtn');
+const formatBtn = document.getElementById('formatBtn');
+const compressBtn = document.getElementById('compressBtn');
+const downloadBtn = document.getElementById('downloadBtn');
+const jsonOutput = document.getElementById('jsonOutput');
+
+let workbookData = [];
+let headers = [];
+
+// 点击上传
+fileUploadArea.addEventListener('click', () => fileInput.click());
+
+// 拖拽上传
+fileUploadArea.addEventListener('dragover', e => { e.preventDefault(); fileUploadArea.style.borderColor='#007bff'; });
+fileUploadArea.addEventListener('dragleave', e => { e.preventDefault(); fileUploadArea.style.borderColor='#ccc'; });
+fileUploadArea.addEventListener('drop', e => {
+    e.preventDefault();
+    fileUploadArea.style.borderColor='#ccc';
+    if(e.dataTransfer.files.length) handleFile(e.dataTransfer.files[0]);
+});
+
+// 文件选择
+fileInput.addEventListener('change', e => handleFile(e.target.files[0]));
+
+function handleFile(file){
+    if(!file) return;
+    const name = file.name;
+    fileNameEl.textContent = name;
+    fileSizeEl.textContent = ` (${(file.size/1024).toFixed(2)} KB)`;
+
+    const reader = new FileReader();
+    reader.onload = e => {
+        let data = e.target.result;
+        try {
+            let wb;
+            if(name.endsWith('.csv')){
+                wb = XLSX.read(data, {type:'binary', codepage:65001});
+            } else {
+                wb = XLSX.read(data, {type:'binary'});
+            }
+            const ws = wb.Sheets[wb.SheetNames[0]];
+            workbookData = XLSX.utils.sheet_to_json(ws, {defval:''});
+            headers = Object.keys(workbookData[0] || {});
+            renderColumns();
+        } catch(err){
+            alert('文件解析失败，请检查文件格式。');
+            console.error(err);
+        }
+    };
+    if(file.name.endsWith('.csv')) reader.readAsBinaryString(file);
+    else reader.readAsBinaryString(file);
+
+    convertBtn.disabled = false;
+}
+
+// 渲染列选择
+function renderColumns(){
+    columnsGrid.innerHTML = '';
+    headers.forEach(h => {
+        const label = document.createElement('label');
+        label.style.marginRight='10px';
+        label.innerHTML = `<input type="checkbox" value="${h}" checked> ${h}`;
+        columnsGrid.appendChild(label);
+    });
+    columnsContainer.style.display = headers.length ? 'block':'none';
+}
+
+// 转换
+convertBtn.addEventListener('click', () => {
+    const checked = Array.from(columnsGrid.querySelectorAll('input[type=checkbox]:checked')).map(i=>i.value);
+    const result = workbookData.map(row=>{
+        const obj={};
+        checked.forEach(col=> obj[col]=row[col]);
+        return obj;
+    });
+    jsonOutput.value = JSON.stringify(result,null,4);
+    formatBtn.disabled=false;
+    compressBtn.disabled=false;
+    downloadBtn.disabled=false;
+});
+
+// 格式化
+formatBtn.addEventListener('click', ()=>{
+    try { jsonOutput.value = JSON.stringify(JSON.parse(jsonOutput.value), null, 4); } 
+    catch(err){ alert('JSON格式错误'); }
+});
+
+// 压缩
+compressBtn.addEventListener('click', ()=>{
+    try { jsonOutput.value = JSON.stringify(JSON.parse(jsonOutput.value)); } 
+    catch(err){ alert('JSON格式错误'); }
+});
+
+// 下载
+downloadBtn.addEventListener('click', ()=>{
+    const blob = new Blob([jsonOutput.value], {type:'application/json'});
+    const url = URL.createObjectURL(blob);
+    const a = document.createElement('a');
+    a.href=url;
+    a.download='data.json';
+    a.click();
+    URL.revokeObjectURL(url);
+});
+
+// 清空
+clearBtn.addEventListener('click', ()=>{
+    fileInput.value='';
+    fileNameEl.textContent='';
+    fileSizeEl.textContent='';
+    workbookData=[];
+    headers=[];
+    columnsGrid.innerHTML='';
+    columnsContainer.style.display='none';
+    jsonOutput.value='';
+    convertBtn.disabled=true;
+    formatBtn.disabled=true;
+    compressBtn.disabled=true;
+    downloadBtn.disabled=true;
+});
+</script>
 </body>
 </html>
