--- a/index.html
+++ b/index.html
@@ -8,48 +8,40 @@
 </head>
 <body class="bg-gray-50 min-h-screen flex flex-col items-center p-4">
   <h1 class="text-3xl font-bold mb-6 text-center">🛠 工具库</h1>
-  <p class="mb-8 text-gray-600 text-center max-w-xl">这里汇总了各种实用网页工具，包括采购、成本分析、思维导图、包装报价、Excel 转 JSON 等，可直接在浏览器使用。</p>
+  <p class="mb-8 text-gray-600 text-center max-w-xl">这里汇总了各种实用网页工具，可直接在浏览器使用。</p>
 
   <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-6 w-full max-w-5xl">
 
-    <!-- 包装报价模板（最前） -->
-    <div class="bg-white rounded-xl shadow p-4 flex flex-col items-center text-center hover:shadow-lg transition">
-      <div class="text-4xl mb-2">📦💰</div>
-      <h2 class="font-semibold mb-1">包装报价模板</h2>
-      <p class="text-gray-500 mb-3 text-sm">填写产品信息、阶梯报价及要求，生成 Excel 报价单。</p>
-      <a href="./packing_quote.html" class="bg-indigo-500 hover:bg-indigo-600 text-white px-4 py-2 rounded">打开工具</a>
-    </div>
-
-    <!-- 思维导图编辑器 -->
-    <div class="bg-white rounded-xl shadow p-4 flex flex-col items-center text-center hover:shadow-lg transition">
-      <div class="text-4xl mb-2">🧠🗺️</div>
-      <h2 class="font-semibold mb-1">思维导图编辑器</h2>
-      <p class="text-gray-500 mb-3 text-sm">在线绘制思维导图，可添加节点、连接线，导出为图片或 JSON。</p>
-      <a href="./mindmap.html" class="bg-green-500 hover:bg-green-600 text-white px-4 py-2 rounded">打开工具</a>
-    </div>
-
-    <!-- 产品成本表（基础版） -->
-    <div class="bg-white rounded-xl shadow p-4 flex flex-col items-center text-center hover:shadow-lg transition">
-      <div class="text-4xl mb-2">💰📊</div>
-      <h2 class="font-semibold mb-1">产品成本表</h2>
-      <p class="text-gray-500 mb-3 text-sm">填写原料、包装、工序等成本，自动计算总价，可导入/导出 Excel。</p>
-      <a href="./cost.html" class="bg-yellow-500 hover:bg-yellow-600 text-white px-4 py-2 rounded">打开工具</a>
-    </div>
-
-    <!-- BOM 层级成本分析 -->
-    <div class="bg-white rounded-xl shadow p-4 flex flex-col items-center text-center hover:shadow-lg transition">
-      <div class="text-4xl mb-2">🧩💹</div>
-      <h2 class="font-semibold mb-1">BOM 层级成本分析</h2>
-      <p class="text-gray-500 mb-3 text-sm">支持半成品/原料层级，自动计算各级成本，并可生成层级图和成本饼图。</p>
-      <a href="./cost_bom.html" class="bg-purple-500 hover:bg-purple-600 text-white px-4 py-2 rounded">打开工具</a>
-    </div>
-
-    <!-- Excel → JSON（最后） -->
+    <!-- Excel → JSON -->
     <div class="bg-white rounded-xl shadow p-4 flex flex-col items-center text-center hover:shadow-lg transition">
       <div class="text-4xl mb-2">📄➡️🗂</div>
       <h2 class="font-semibold mb-1">Excel → JSON</h2>
       <p class="text-gray-500 mb-3 text-sm">将 Excel 表格快速转换为 JSON 格式，便于前端或系统使用。</p>
       <a href="./excel2json.html" class="bg-blue-500 hover:bg-blue-600 text-white px-4 py-2 rounded">打开工具</a>
+    </div>
+
+    <!-- Chirpy7.4 Markdown 转换器 -->
+    <div class="bg-white rounded-xl shadow p-4 flex flex-col items-center text-center hover:shadow-lg transition">
+      <div class="text-4xl mb-2">📝💻</div>
+      <h2 class="font-semibold mb-1">Chirpy7.4 Markdown 转换器</h2>
+      <p class="text-gray-500 mb-3 text-sm">在线编辑和转换 Markdown 文档，实时预览，支持导出 HTML。</p>
+      <a href="./generator.html" class="bg-indigo-500 hover:bg-indigo-600 text-white px-4 py-2 rounded">打开工具</a>
+    </div>
+
+    <!-- 今日待办 -->
+    <div class="bg-white rounded-xl shadow p-4 flex flex-col items-center text-center hover:shadow-lg transition">
+      <div class="text-4xl mb-2">📋✅</div>
+      <h2 class="font-semibold mb-1">今日待办</h2>
+      <p class="text-gray-500 mb-3 text-sm">管理每日任务，标记已完成事项，提升工作效率。</p>
+      <a href="./todo.html" class="bg-green-500 hover:bg-green-600 text-white px-4 py-2 rounded">打开工具</a>
+    </div>
+
+    <!-- 今日热榜 -->
+    <div class="bg-white rounded-xl shadow p-4 flex flex-col items-center text-center hover:shadow-lg transition">
+      <div class="text-4xl mb-2">🔥📈</div>
+      <h2 class="font-semibold mb-1">今日热榜</h2>
+      <p class="text-gray-500 mb-3 text-sm">查看今日最热门新闻和内容，实时更新热点趋势。</p>
+      <a href="https://tophub.today/" target="_blank" class="bg-red-500 hover:bg-red-600 text-white px-4 py-2 rounded">打开网站</a>
     </div>
 
   </div>
